# pget_iplayer

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: build-and-release.yaml  build.yaml  check.yaml  release.yaml
auntie/: __init__.py  __main__.py  cli.py  version.py
auntie/cli/: __init__.py  app.py  arguments.py  colours.py  debug.py  downloader.py  expansion.py  filesystem.py  iplayer.py  metadata.py  pids.py  progress.py  utils.py
pget_iplayer/: __init__.py  __main__.py  cli.py  version.py
tests/: test_cli_helpers.py
tests/fixtures/bbc/: brand.json  brand_children.json  episode.json  series.json  series_children_page_1.json  series_children_page_2.json
