[project]
name = "pget-iplayer"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.5",
    "tqdm>=4.66",
]

[project.scripts]
pget_iplayer = "pget_iplayer.cli:main"

[dependency-groups]
dev = [
    "nuitka>=2.8.4",
]
