[project]
name = "pget-iplayer"
version = "0.6.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests==2.32.5",
    "tqdm==4.66",
]

[project.scripts]
pget_iplayer = "pget_iplayer.cli:main"

[dependency-groups]
build = [
    "nuitka==2.8.4",
]
check = [
    "pre-commit==4.3.0",
    "pytest>=8.4.2",
]
